<?xml version="1.0"?>
<package>
  <name>jsk_libfreenect2</name>
  <version>0.1.23</version>
  <description>The libfreenect2 package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>git</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>autoconf</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>
  <build_depend>mk</build_depend>
  <run_depend>mk</run_depend>
  <build_depend>libudev-dev</build_depend>
  <run_depend>libudev-dev</run_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>camera_info_manager</build_depend>
  <run_depend>camera_info_manager</run_depend>
  <build_depend>libxxf86vm</build_depend>
  <run_depend>libxxf86vm</run_depend>
  <build_depend>glut</build_depend>
  <run_depend>glut</run_depend>
  <build_depend>libturbojpeg</build_depend>
  <run_depend>libturbojpeg</run_depend>
  <run_depend>resized_image_transport</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
